@@ -183,7 +183,6 @@ Set JAVA_HOME and IntelliJ: Settings → Build Tools → Maven → Runner → JR
         <profile>
             <id>gc-zgc</id>
             <properties>
-<!--                <jvm.gc.extra>-XX:+UseZGC</jvm.gc.extra>-->
                 <jvm.gc.extra>-XX:+UseG1GC</jvm.gc.extra>
             </properties>
         </profile>
